Uji CI/CD: Mengubah judul halaman dan menambah teks versi

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Sederhana</title>
+    <title>Kalkulator CI/CD Keren</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,6 +12,9 @@
     <div class="calculator">
         <input type="text" id="display" disabled>
         <div class="buttons">
+            </div>
+    <p style="color: white; font-size: 0.8em; margin-top: 10px;">Versi CI/CD v1.1</p> </div>
+
             <button onclick="clearDisplay()" class="operator">C</button>
             <button onclick="deleteLast()" class="operator">DEL</button>
             <button onclick="appendToDisplay('/')" class="operator">/</button>
